# compressors

./: LICENSE  README.md  benchmark.sh  test.txt
.github/workflows/: docker.yml
js-compressor/: Dockerfile  index.js  lz.js  package-lock.json  package.json  rle.js
js-compressor/test/: lz.test.js  rle.test.js
js-compressor/tests/: lz.test.js  rle.test.js
rust-compressor/: Cargo.toml  Dockerfile  compressed.cmp
rust-compressor/src/: lz.rs  main.rs  rle.rs
rust-compressor/test_files/: input.txt  output.cmp  output.txt
rust-compressor/tests/: integration_tests.rs
