[package]
name = "rust-compressor"
version = "0.1.0"
edition = "2021"
authors = ["onelrian"]
description = "A compression tool implementing LZ77 and RLE algorithms"

[[bin]]
name = "compressor"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
